# game_ghost

./: CMakeLists.txt  README.md
include/: GameMacro.h
include/aslib/: asSingleton.h
include/component/: Sprite.h  SpriteAnimation.h
include/core/: AssetManager.h  ComponentObject.h  GameEngine.h  GameObject.h  Object.h  Scene.h  ScreenObject.h  WorldObject.h
include/entity/: Enemy.h  Player.h
include/scene/: FightScene.h
src/: main.cpp
src/component/: Sprite.cpp  SpriteAnimation.cpp
src/core/: AssetManager.cpp  GameEngine.cpp  GameObject.cpp  Object.cpp  Scene.cpp  ScreenObject.cpp  WorldObject.cpp
src/entity/: Player.cpp
src/scene/: FightScene.cpp
